上线前的准备

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <script src="https://cdn.bootcss.com/axios/0.19.2/axios.min.js"></script>
   <meta name="viewport" content="width=device-width, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <title><%= htmlWebpackPlugin.options.title %></title>
+  <title>u报名后台管理系统</title>
 </head>
 
 <body>
